fixed the overflow on the grid

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -196,9 +196,10 @@ margin-bottom: 20px;
 #boxes {
     margin: auto 30px;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 300px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: max-content;
     column-gap: 50px;
+    row-gap: 50px;
     align-items: center;
 }
 
